--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,7 @@ options:
   RENDERING_DELAY: '0'
   RENDERING_SCREEN_HEIGHT: '800'
   RENDERING_SCREEN_WIDTH: '600'
+  REMOVE_HEADER_HEIGHT: '0'
   ROTATION: '0'
   SCALING: '1'
   GRAYSCALE_DEPTH: '8'
@@ -46,6 +47,7 @@ schema:
   RENDERING_DELAY: "int"
   RENDERING_SCREEN_HEIGHT: "int"
   RENDERING_SCREEN_WIDTH: "int"
+  REMOVE_HEADER_HEIGHT: "int"
   ROTATION: "int"
   SCALING: "int"
   GRAYSCALE_DEPTH: "int"
